add definitions
